# query-sandbox

./: Makefile  README.md  litecli.conf  pyproject.toml  queries.py
data/: deals.sql  executions.csv  tfr.csv  verbos.sql
